style: 前端工程结构优化